<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="8dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:padding="5dp">

        <TextView
            android:id="@+id/order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"/>

        <TextView
            android:id="@+id/order_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/order_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"/>

        <TextView
            android:id="@+id/order_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points"/>

        <TextView
            android:id="@+id/order_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"/>

        <TextView
            android:id="@+id/order_created_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_time"/>

        <TextView
            android:id="@+id/order_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"/>
    </LinearLayout>
</android.support.v7.widget.CardView>
